syntax = "proto3";

package brewview.v1;

import "brewview/v1/client.proto";
import "buf/validate/validate.proto";

message User {
  int32 user_id = 1;
  string user_name = 2;
  string user_image = 3;
  string user_email = 4;
  string user_phone = 5;
  string created_at = 7;
  string updated_at = 8;
}

message UserAuthorizeRequest {}

message UserLoginRequest {
  string user_email_or_code = 1;
  string user_password = 2;
}
message SideBarItem {
  string key = 1;
  string label = 2;
  string icon = 3;
  string to = 4;
  repeated SideBarItem items = 5;
}
message LoginInfo {
  string access_token = 1;
  string access_token_expires_at = 4;
}
message UserRole {
  int32 role_id = 1;
  string role_name = 2;
}
message UserLoginResponse {
  int32 user_id = 1;
  string user_name = 2;
  string user_image = 3;
  string user_email = 4;
  string user_phone = 5;
  string created_at = 7;
  string updated_at = 8;
  int32 session_id = 10;
  int32 entity_id = 11;
  repeated string permissions = 12;
  repeated UserRole roles = 13;
  repeated SideBarItem side_bar = 14;
  LoginInfo login_info = 15;
}

message UserResetPasswordRequest {
  string user_email = 1;
  string user_password = 2;
}
message UserResetPasswordResponse {}

message UsersListRequest {}

message UsersListRow {
  int32 user_id = 1;
  string user_name = 2;
  string user_image = 3;
  string user_email = 4;
  string user_phone = 5;
  repeated UserRole roles = 6;
  string created_at = 7;
  string deleted_at = 8;
}
message UsersListResponse {
  ListDataOptions options = 1;
  repeated UsersListRow records = 2;
  repeated UsersListRow deleted_records = 3;
}
message UserDeleteRestoreRequest {
  repeated int32 user_ids = 1;
}
message UserDeleteRestoreResponse {}

message UserCreateRequest {
  string user_name = 1 [(buf.validate.field).cel = {
    message: "user_name_min_2_max_200",
    expression: "uint(this.size()) > 2 && uint(this.size()) < 200"
  }];
  string user_image = 2;

  string user_email = 4 [(buf.validate.field).cel = {
    message: "user_email_min_2_max_200",
    expression: "uint(this.size()) > 2 && uint(this.size()) < 200"
  }];
  string user_phone = 5;
  string user_password = 6;
  repeated int32 roles = 7 [(buf.validate.field).repeated = {
    unique: true,
    max_items: 200,
  }];
  repeated int32 permissions = 8 [(buf.validate.field).repeated = {
    unique: true,
    max_items: 200,
  }];
}
message UserCreateResponse {
  User user = 1;
}

message UserFindForUpdateRequest {
  int32 user_id = 1;
}

message UserUpdateRequest {
  int32 user_id = 1 [(buf.validate.field).int32.gt = 0];
  string supa_token = 3 [(buf.validate.field).string.min_len = 1];
  string user_name = 2 [
    (buf.validate.field).string.min_len = 2,
    (buf.validate.field).string.max_len = 200
  ];
  string user_image = 4;
  string user_email = 5;
  string user_phone = 6;
  string user_password = 7;
  repeated int32 roles = 8 [(buf.validate.field).repeated = {
    unique: true,
    max_items: 200,
  }];
  repeated int32 permissions = 9 [(buf.validate.field).repeated = {
    unique: true,
    max_items: 200,
  }];
}
message UserUpdateResponse {
  User user = 1;
}
